--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -15,6 +15,11 @@
     font-size: 12px;
     color: var(--yellow);
   }
+  @media (max-width: 767px) {
+    p {
+      font-size: 10px;
+    }
+  }
 }
 
 .footer__menu {
@@ -25,6 +30,9 @@
   align-items: flex-start;
   align-content: center;
   gap: 20px;
+  @media (max-width: 767px) {
+    gap: 24px;
+  }
   li {
     font-size: 20px;
     line-height: 1.2;
@@ -37,6 +45,11 @@
       &:hover {
         color: var(--yellow);
       }
+    }
+
+    @media (max-width: 1023px) {
+      font-size: 18px;
+      text-align: center;
     }
   }
 }
