--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -115,6 +115,15 @@
       margin-left: auto;
     }
   }
+
+  @media (max-width: 1279px) {
+    gap: 20px;
+    li {
+      .menu__link {
+        font-size: 16px;
+      }
+    }
+  }
 }
 
 .header__buttons {
@@ -128,9 +137,13 @@
 }
 
 @media (max-width: 1023px) {
+  .header {
+    border-bottom: 0px;
+  }
   .burger {
     display: flex;
-    position: relative;
+    position: absolute;
+    right: 10px;
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -144,22 +157,25 @@
     &:before,
     &:after {
       position: absolute;
-      height: 4px;
-      border-radius: 2px;
+      height: 2px;
       background: var(--white);
       transition: 0.6s;
       opacity: 1;
       z-index: 1;
     }
 
-    &:before,
+    &:before {
+      content: '';
+      width: 22px;
+    }
+
     &:after {
       content: '';
-      width: 20px;
+      width: 10px;
     }
 
     span {
-      width: 20px;
+      width: 16px;
       transform: translate(0px, 0px);
     }
     &:before {
@@ -175,12 +191,46 @@
         opacity: 0;
       }
       &:before {
-        background: var(--bg);
+        width: 22px;
         transform: translate(0px, 0px) rotate(45deg);
       }
       &:after {
-        background: var(--bg);
+        width: 22px;
         transform: translate(0px, 0px) rotate(-45deg);
+      }
+    }
+  }
+
+  .header {
+    height: 50px;
+    border-bottom: none;
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 51px;
+      background: var(--bg);
+      border-bottom: 3px solid var(--yellow);
+      z-index: 2;
+    }
+  }
+
+  .header__logo {
+    margin: 0 auto;
+    height: 50px;
+    width: 146px;
+    .logo {
+      height: 75px;
+      img {
+        width: 102px;
+      }
+      &:before {
+        width: 50%;
+        height: 50%;
+        left: 25%;
+        top: 25%;
       }
     }
   }
@@ -213,20 +263,31 @@
 
   .menu {
     padding: 100px 30px 40px 30px;
+
     @media (max-width: 767px) {
-      padding: 100px 20px 30px 20px;
+      padding: 100px 20px 40px 20px;
     }
     width: 100%;
     max-width: 768px;
-    min-height: 100vh;
+    min-height: 100svh;
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    gap: 10px;
+    align-items: center;
+    align-content: center;
+    gap: 40px;
     li {
+      &:first-child {
+        margin-left: 0;
+        margin-top: auto;
+      }
       .menu__link {
         font-size: 32px;
+      }
+      &.header__buttons {
+        width: 100%;
+        margin-top: auto;
+        flex-direction: column;
       }
     }
   }
