--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -25,9 +25,6 @@ body.locked {
   -webkit-overflow-scrolling: touch;
   padding: 50px 20px;
   backdrop-filter: blur(8px);
-  @media (max-width: 767px) {
-    padding: 20px;
-  }
 
   transition: opacity $popup_transition ease-in-out 0s, visibility $popup_transition ease-in-out 0s;
   opacity: 0;
@@ -77,7 +74,8 @@ body.locked {
   }
 }
 
-.popup-close {
+.popup-close,
+.file-reset {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -88,10 +86,6 @@ body.locked {
   top: -10px;
   width: 38px;
   height: 38px;
-  @media (max-width: 767px) {
-    right: 14px;
-    top: 14px;
-  }
   border-radius: 38px;
   transform: rotate(0deg);
   z-index: 2;
@@ -123,6 +117,31 @@ body.locked {
   }
 }
 
+.popup-close {
+  @media (max-width: 767px) {
+    left: auto;
+    right: -8px;
+    top: -40px;
+  }
+}
+
+.file-reset {
+  width: 26px;
+  height: 26px;
+  left: auto;
+  right: -10px;
+  top: -8px;
+  background: var(--black);
+  border-radius: 26px;
+  z-index: 2;
+  &::before,
+  &::after {
+    width: 14px;
+    height: 2px;
+    background: var(--white);
+  }
+}
+
 .popup-content {
   user-select: none;
   max-width: 375px;
@@ -143,6 +162,9 @@ body.locked {
     color: var(--white);
     margin-bottom: 0px;
   }
+  @media (max-width: 767px) {
+    font-size: 30px;
+  }
 }
 
 .popup-subtitle {
@@ -156,6 +178,9 @@ body.locked {
   strong {
     font-family: var(--4);
     font-size: 20px;
+    @media (max-width: 767px) {
+      font-size: 18px;
+    }
   }
 
   &.no-margin {
@@ -169,6 +194,9 @@ body.locked {
   background: var(--bg);
   padding: 50px 30px 30px 30px;
   border-radius: 24px;
+  @media (max-width: 767px) {
+    padding: 50px 20px 20px 20px;
+  }
 
   .buttons {
     display: flex;
