--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -33,6 +33,9 @@ body {
   line-height: 1.4;
   overflow-x: hidden;
   overflow-y: auto;
+  @media (max-width: 1023px) {
+    background-color: #000102;
+  }
 }
 
 html,
@@ -138,6 +141,9 @@ a {
     left: 0px;
     z-index: 4;
     pointer-events: none;
+    @media (max-width: 767px) {
+      height: 30px;
+    }
   }
 }
 
