--- a/assets/scss/_section__lk.scss
+++ b/assets/scss/_section__lk.scss
@@ -1,6 +1,12 @@
 .section--lk {
   min-height: 100vh;
   padding: 150px 0px;
+  @media (max-width: 1279px) {
+    padding: 130px 0px;
+  }
+  @media (max-width: 1023px) {
+    padding: 100px 0px;
+  }
 
   .container {
     max-width: 1020px;
@@ -12,6 +18,14 @@
     align-items: center;
     align-content: center;
     gap: 100px;
+    @media (max-width: 1310px) {
+      max-width: 1060px;
+    }
+
+    @media (max-width: 767px) {
+      max-width: 450px;
+      gap: 60px;
+    }
 
     .title--h2 {
       color: var(--yellow);
@@ -20,12 +34,17 @@
 
   .table {
     margin-top: 10px;
-    //  table-layout: fixed;
     tr {
       th,
       td {
         &:first-child {
           padding-left: 60px;
+          @media (max-width: 1023px) {
+            padding-left: 20px;
+          }
+          @media (max-width: 767px) {
+            padding-left: 0px;
+          }
         }
         &:nth-child(3) {
           white-space: initial;
@@ -35,6 +54,13 @@
           padding-right: 60px;
           max-width: 170px;
           white-space: nowrap;
+          @media (max-width: 1023px) {
+            padding-right: 20px;
+          }
+          @media (max-width: 767px) {
+            padding-right: 0px;
+            white-space: initial;
+          }
         }
       }
     }
@@ -114,6 +140,56 @@
     line-height: 1.12;
     .link {
       color: var(--bg);
+    }
+  }
+
+  @media (max-width: 1279px) {
+    gap: 30px;
+    li {
+      width: calc((100% - 30px) / 2);
+      min-height: 240px;
+      border-radius: 18px;
+      padding: 24px;
+
+      &:last-child {
+        background-size: 170px auto;
+      }
+    }
+
+    .lk-head__title {
+      font-size: 22px;
+      line-height: 1.2;
+      margin-bottom: 20px;
+    }
+
+    .contacts {
+      gap: 14px;
+      p {
+        font-size: 18px;
+      }
+    }
+
+    p {
+      max-width: 290px;
+      font-size: 18px;
+      line-height: 1.2;
+    }
+  }
+
+  @media (max-width: 767px) {
+    gap: 12px;
+    flex-direction: column;
+    li {
+      width: 100%;
+      padding: 24px 20px;
+
+      &:last-child {
+        background-size: 160px auto;
+      }
+    }
+
+    .lk-head__title {
+      font-size: 20px;
     }
   }
 }
