--- a/assets/scss/_section__memory.scss
+++ b/assets/scss/_section__memory.scss
@@ -1,6 +1,12 @@
 .section--memory {
   min-height: 100svh;
-  background: url('../img/game-bg.webp') no-repeat center center/cover;
+  background: url('../img/game-bg.webp') no-repeat left center/cover;
+
+  @media (max-width: 767px) {
+    .popup-content {
+      width: calc(100svw - 40px);
+    }
+  }
 }
 
 .swiper--memory {
@@ -47,8 +53,16 @@
   align-items: center;
   align-content: center;
   gap: 20px;
+  @media (max-width: 767px) {
+    gap: 12px;
+  }
 
   .title {
+    &.title--h1 {
+      @media (max-width: 767px) {
+        margin-bottom: 20px;
+      }
+    }
     margin: 0;
   }
 
@@ -56,16 +70,35 @@
     text-align: center;
     font-size: 22px;
     font-family: var(--4);
+    @media (max-width: 1279px) {
+      font-size: 20px;
+    }
+
+    @media (max-width: 767px) {
+      max-width: 296px;
+      font-size: 18px;
+      line-height: 1.3;
+      br {
+        display: none;
+      }
+    }
   }
 
   .button {
     margin-top: 14px;
+    @media (max-width: 767px) {
+      padding: 10px 40px;
+    }
   }
 
   .memory-preview {
     max-width: 300px;
     margin-top: 20px;
     margin-bottom: 20px;
+
+    @media (max-width: 1279px) {
+      max-width: 250px;
+    }
   }
 
   .memory-board__text {
@@ -110,6 +143,21 @@
           transform: scale(1.1);
         }
       }
+    }
+  }
+
+  @media (max-width: 1279px) {
+    max-width: 920px;
+    gap: 10px;
+    li {
+      width: calc((100% - 60px) / 7);
+    }
+  }
+
+  @media (max-width: 1023px) {
+    max-width: 600px;
+    li {
+      width: calc((100% - 30px) / 4);
     }
   }
 }
