--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -6,11 +6,23 @@
     font-size: 68px;
     text-align: center;
     font-family: var(--2);
+    @media (max-width: 1279px) {
+      font-size: 56px;
+    }
+    @media (max-width: 767px) {
+      font-size: 35px;
+    }
   }
 
   &.title--h2 {
     font-size: 44px;
     text-align: center;
+    @media (max-width: 1279px) {
+      font-size: 40px;
+    }
+    @media (max-width: 767px) {
+      font-size: 30px;
+    }
   }
   &.title--h3 {
     font-size: 32px;
@@ -55,6 +67,32 @@
           z-index: -1;
           opacity: 0;
           transition: 1s ease 0.5s;
+        }
+      }
+    }
+    @media (max-width: 1279px) {
+      max-width: 540px;
+      margin-left: 30px;
+      font-size: 56px;
+      span {
+        &.underline {
+          &:before {
+            background-size: 420px 100%;
+          }
+        }
+      }
+    }
+    @media (max-width: 767px) {
+      max-width: 340px;
+      margin-left: 0px;
+      font-size: 35px;
+      span {
+        &.underline {
+          &:before {
+            background-size: 270px 100%;
+            height: 15px;
+            bottom: 0px;
+          }
         }
       }
     }
