--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -195,7 +195,7 @@ body.locked {
   padding: 50px 30px 30px 30px;
   border-radius: 24px;
   @media (max-width: 767px) {
-    padding: 50px 20px 20px 20px;
+    padding: 50px 30px 30px 30px;
   }
 
   .buttons {
@@ -214,6 +214,11 @@ body.locked {
       font-family: var(--400);
       font-size: 16px;
       margin-top: 5px;
+      @media (max-width: 767px) {
+        font-size: 14px;
+        margin-top: 2px;
+        margin-bottom: 10px;
+      }
     }
   }
 }
@@ -242,6 +247,9 @@ body.locked {
     position: absolute;
     top: 0%;
     transform: translate(0%, -110%);
+    @media (max-width: 767px) {
+      font-size: 24px;
+    }
   }
 }
 
@@ -291,6 +299,91 @@ body.locked {
       }
     }
   }
+  @media (max-width: 1439px) {
+    max-width: 1140px;
+    .production {
+      gap: 16px;
+      li {
+        gap: 18px;
+        width: calc((100% - 80px) / 6);
+        h3 {
+          font-size: 22px;
+        }
+        p {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+  @media (max-width: 1279px) {
+    max-width: 900px;
+    .production {
+      margin-top: 80px;
+      li {
+        width: calc((100% - 32px) / 3);
+        margin-top: -80px;
+        img {
+          width: 60%;
+          margin: 0 auto;
+        }
+        h3 {
+          font-size: 24px;
+        }
+        p {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+  @media (max-width: 1023px) {
+    max-width: 640px;
+    .production {
+      margin-top: 20px;
+      li {
+        margin-top: -20px;
+        img {
+          width: 80%;
+        }
+        h3 {
+          font-size: 20px;
+        }
+        p {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+  @media (max-width: 767px) {
+    max-width: 640px;
+    .title.title--h4 {
+      font-size: 20px;
+    }
+    .production {
+      flex-direction: column;
+      margin-top: 80px;
+      li {
+        width: 252px;
+        margin: 0 auto;
+        margin-top: -80px;
+        img {
+          width: 70%;
+        }
+        h3 {
+          font-size: 24px;
+        }
+        p {
+          font-size: 16px;
+        }
+        &:nth-child(3),
+        &:nth-child(5) {
+          margin-top: -100px;
+        }
+        &:last-child {
+          margin-top: -30px;
+        }
+      }
+    }
+  }
 }
 
 #memory {
@@ -299,6 +392,11 @@ body.locked {
     margin: 0 auto;
     margin-top: -110px;
     margin-bottom: 20px;
+  }
+  @media (max-width: 767px) {
+    .popup-subtitle b {
+      font-size: 20px;
+    }
   }
 }
 
@@ -316,6 +414,33 @@ body.locked {
   .form {
     padding: 30px 40px;
   }
+
+  @media (max-width: 767px) {
+    .tabs-navigation {
+      li {
+        &:first-child {
+          max-width: 140px;
+        }
+      }
+      li button {
+        font-size: 20px;
+        padding: 0px 20px;
+        min-height: 60px;
+      }
+    }
+
+    .form {
+      padding: 30px 30px;
+    }
+  }
+}
+
+#cheque-info {
+  .red-wrapper {
+    @media (max-width: 767px) {
+      padding: 50px 20px 30px 20px;
+    }
+  }
 }
 
 .register-check-list {
@@ -330,6 +455,9 @@ body.locked {
     position: relative;
     padding-left: 40px;
     font-size: 16px;
+    @media (max-width: 767px) {
+      font-size: 14px;
+    }
     ul {
       display: flex;
       width: 100%;
@@ -348,6 +476,12 @@ body.locked {
       height: 32px;
       left: 0px;
       top: -5px;
+      @media (max-width: 767px) {
+        width: 25px;
+        height: 25px;
+        left: 0px;
+        top: -6px;
+      }
     }
   }
 }
